--- a/adapter/adapter-motan/pom.xml
+++ b/adapter/adapter-motan/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>motan-springsupport</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
