--- a/starter/starter-adapter/starter-adapter-common/pom.xml
+++ b/starter/starter-adapter/starter-adapter-common/pom.xml
@@ -16,5 +16,10 @@
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-adapter-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
