--- a/starter/starter-common/pom.xml
+++ b/starter/starter-common/pom.xml
@@ -30,5 +30,10 @@
             <groupId>org.dromara.dynamictp</groupId>
             <artifactId>dynamic-tp-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
