--- a/starter/starter-configcenter/cloud-starter-nacos/pom.xml
+++ b/starter/starter-configcenter/cloud-starter-nacos/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.dromara.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
