--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
                 <inherited>true</inherited>
                 <executions>
                     <execution>
