--- a/.github/workflows/build-jvmti.yml
+++ b/.github/workflows/build-jvmti.yml
@@ -16,9 +16,9 @@ jobs:
         run: |
           cd ${{ github.workspace }}/jvmti/jvmti-build
           mvn package
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: lib
+          name: lib-linux
           path: jvmti/jvmti-build/target/classes/lib*
           if-no-files-found: error
 
@@ -35,9 +35,9 @@ jobs:
         run: |
           cd ${{ github.workspace }}/jvmti/jvmti-build
           mvn package
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: lib
+          name: lib-macos
           path: jvmti/jvmti-build/target/classes/lib*
           if-no-files-found: error
 
@@ -54,8 +54,8 @@ jobs:
         run: |
           cd ${{ github.workspace }}/jvmti/jvmti-build
           mvn package
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: lib
+          name: lib-windows
           path: jvmti/jvmti-build/target/classes/*.dll
           if-no-files-found: error
