remove common alarm logic from AlarmInvoker

--- a/example/example-nacos-cloud/src/main/resources/dynamic-tp-nacos-cloud-demo-dtp-dev.yml
+++ b/example/example-nacos-cloud/src/main/resources/dynamic-tp-nacos-cloud-demo-dtp-dev.yml
@@ -90,3 +90,9 @@ dynamictp:
       keepAliveTime: 50
       allowCoreThreadTimeOut: false
       threadNamePrefix: test
+    - threadPoolName: virtualThreadExecutor1
+      executorType: virtual
+      notifyItems:
+        - type: pin_timeout
+          enabled: true
+          threshold: 3
