--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -64,6 +64,7 @@
         <dropwizard-metrics.version>4.2.20</dropwizard-metrics.version>
         <jmh.version>1.35</jmh.version>
         <native-lib-loader.version>2.0.2</native-lib-loader.version>
+        <bytebuddy.version>1.15.5</bytebuddy.version>
     </properties>
 
     <dependencyManagement>
@@ -330,6 +331,13 @@
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
                 <version>${dropwizard-metrics.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>${bytebuddy.version}</version>
             </dependency>
 
             <dependency>
