--- a/example/example-nacos-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-nacos-cloud/src/main/resources/bootstrap.yml
@@ -18,6 +18,9 @@ spring:
             group: DEFAULT_GROUP
             refresh: true  # 必须配置，负责自动刷新不生效
         refresh-enabled: true
+  config:
+    import:
+      - optional:nacos:dynamic-tp-nacos-cloud-demo-dtp-dev.yml
   data:
     redis:
       host: ${redis:localhost}
