add example-adapter-liteflow and example-adapter-webserver modules

--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -24,6 +24,8 @@
         <module>example-adapter-motan</module>
         <module>example-adapter-rocketmq</module>
         <module>example-adapter-rabbitmq</module>
+        <module>example-adapter-liteflow</module>
+        <module>example-adapter-webserver</module>
     </modules>
 
     <dependencies>
