--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -22,10 +22,10 @@
 
         <hutool.version>5.8.25</hutool.version>
         <guava.version>31.1-jre</guava.version>
-        <jackson-core.version>2.13.4</jackson-core.version>
-        <jackson-databind.version>2.13.4</jackson-databind.version>
+        <jackson.version>2.13.4</jackson.version>
         <gson.version>2.8.9</gson.version>
         <fastjson.version>1.2.83</fastjson.version>
+
         <ttl.version>2.14.3</ttl.version>
         <equator.version>1.0.4</equator.version>
 
@@ -162,13 +162,13 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>${jackson-core.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-databind.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <dependency>
