--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -29,3 +29,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Install thrift
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y thrift
