--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -21,9 +21,6 @@ jobs:
       - name: Install thrift
         run: |
           sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y ppa:thrift/ppa
-          sudo apt-get update
-          sudo apt-get install -y thrift
+          sudo apt-get install -y thrift-compiler
       - name: Build with Maven
         run: mvn -B package --file pom.xml
